fix: Overflowing delimiter option wrappers

--- a/src/vue/settings/pages/date_and_time_pages/time_display/time_display.scss
+++ b/src/vue/settings/pages/date_and_time_pages/time_display/time_display.scss
@@ -35,10 +35,11 @@ main.component-time-display {
    */
   section.time-display-delimiter {
     background: var(--accent);
+    box-sizing: border-box;
     flex-direction: row;
     margin-bottom: 16px;
     display: flex;
-    height: 72px;
+    height: 80px;
     padding: 4px;
     width: 100%;
 
